force-app/main/default/objects/RR_Additional_Job_Recommended__c/RR_Additional_Job_Recommended__c.object-meta.xml
<CustomObject>
    <label>Additional Job Recommended</label>
    <nameField>
        <displayFormat>AJ-{0000}</displayFormat>
        <label>Additional Job No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Additional Jobs Recommended</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>