force-app/main/default/objects/RR_Additional_Job_Recommended__c/fields/RR_Labour_Code__c.field-meta.xml
<CustomField>
    <fullName>RR_Labour_Code__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Labour Code</label>
    <referenceTo>CodeSet</referenceTo>
    <relationshipLabel>Additional Jobs Recommended</relationshipLabel>
    <relationshipName>Additional_Jobs_Recommended</relationshipName>
    <type>Lookup</type>
</CustomField>