force-app/main/default/objects/RR_Additional_Job_Recommended__c/fields/RR_Product__c.field-meta.xml
<CustomField>
    <fullName>RR_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Please select an active product.</errorMessage>
        <filterItems>
            <field>Product2.IsActive</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Additional Jobs Recommended</relationshipLabel>
    <relationshipName>Additional_Jobs_Recommended</relationshipName>
    <type>Lookup</type>
</CustomField>