force-app/main/default/objects/RR_Additional_Job_Recommended__c/fields/RR_Quantity__c.field-meta.xml
<CustomField>
    <fullName>RR_Quantity__c</fullName>
    <defaultValue>1</defaultValue>
    <label>Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>