force-app/main/default/objects/RR_Additional_Job_Recommended__c/fields/RR_Sub_Total__c.field-meta.xml
<CustomField>
    <fullName>RR_Sub_Total__c</fullName>
    <formula>RR_Unit_Price__c *  RR_Quantity__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sub Total</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>