force-app/main/default/objects/RR_Additional_Job_Recommended__c/fields/RR_Unit_Price__c.field-meta.xml
<CustomField>
    <fullName>RR_Unit_Price__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Unit Price</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>