force-app/main/default/objects/RR_Additional_Job_Recommended__c/fields/RR_Work_Order__c.field-meta.xml
<CustomField>
    <fullName>RR_Work_Order__c</fullName>
    <label>Work Order</label>
    <referenceTo>WorkOrder</referenceTo>
    <relationshipLabel>Additional Jobs Recommended</relationshipLabel>
    <relationshipName>Additional_Jobs_Recommended</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>